--- a/vidio.html
+++ b/vidio.html
@@ -15,7 +15,7 @@
     <marquee style="background-color: blue; color: white; font-size: x-large;"
     >SELAMAT MENONTON SEMOGA HARIMU MENYENANGKAN</marquee>
     <center>
-    <video loop="false" widht="600px" height="600px"  style="border-radius: 50px;" >  
+    <video controls loop widht="600px" height="600px"  style="border-radius: 50px;" >  
         <source src="thunder.mp4" type="video/mp4">
         <source src="thunder.ogg" type="video/ogg">
         <p>Sorry, Your Browser Doesn't Support Embedded Videos. Here's the </p>
