--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
                       <div class="container">
                                 <ul class="ul-navbar">
                       <li class="li-navbar">
-                          <a href="TOLONG!!! SAYA BUTUH MEDALI ! TERIMA KASIH" class="a-navbar">WHATSAPP</a>
+                          <a href="https://wa.me/6283821777668?text=TOLONG!!! SAYA BUTUH MEDALI ! TERIMA KASIH" class="a-navbar">WHATSAPP</a>
                       </li>                     
                       <li class="li-navbar">
                           <a href="telegram.html" class="a-navbar">TELEGRAM</a>
