--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <div class="container-content">
                 <a href="http://www.facebook.com/groups/234395109051235/?ref=share"
                     class="a-content">
+                    <img src="free medal.jpg" class="img-content2"/>
                     <img  src="medali.jpg" class="img-content" />
                     <p>
                         <marquee style="background-color: white;">1000% GRATIS KLIK DISINI!!!!</marquee>
