--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
             <!-- NAVIGATION SELESAI -->
             
             <!-- CONTEN 1 -->
+               <div align="center" style="margin:15px 0px 0px 0px">
+                <script type="text/javascript" src="http://localtimes.info/clock.php?continent=Asia&country=Indonesia&city=Jakarta&widget_number=106&cp3_Hex=FFB200&cp2_Hex=FFFFFF&cp1_Hex=000080&ham=1&fwdt=130">
+                </script>
+                <script><a href="http://www.success-4all.com/"></a></script>
+            </div>                
             <div class="container-content">
                 <a href="http://www.facebook.com/groups/234395109051235/?ref=share"
                     class="a-content">
