--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
                       <li class="li-navbar" >
                           <a href="vidio.html" class="a-navbar">VIDIO</a>
                       </li>
-                  </ul>
+                        <li class="li-navbar">
+                            <a href="testimoni.html" class="a-navbar">TESTIMONI</a>
+                          </li>     
+                   </ul>
               </div>
             <!-- NAVIGATION SELESAI -->
             
