--- a/testimoni.html
+++ b/testimoni.html
@@ -14,9 +14,9 @@
   <marquee direction="down"  >  
     <img src="tes1.jpg" class="img-content3"/>
 </marquee>
-<marquee direction="right" behavior="alternate" >
+<marquee direction="right" >
         <img src="tes2.jpg" class="img-content3" /></marquee>
- <marquee direction="left"  behavior="alternate">      
+ <marquee direction="left">      
         <img src="tes3.jpg" class="img-content3"/>
     </marquee>
     </div>
