--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
               <div align="center" style="margin:15px 0px 0px 0px">
                 <script type="text/javascript" src="http://localtimes.info/clock.php?continent=Asia&country=Indonesia&city=Jakarta&widget_number=106&cp3_Hex=FFB200&cp2_Hex=FFFFFF&cp1_Hex=000080&ham=1&fwdt=130">
                 </script>
-                <script><a href="http://www.success-4all.com/"></a></script>
+                <script><a href="http://www.success-4all.com/"></script>
             </div>                
 
               <!-- NAVIGATION BAR -->
