--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
       <title>web mailda turohmnan</title>
       <link rel="stylesheet" href="yaya.css" />
-          <body background-image: url(pro.gif);>
+          <body style="background-image: url(Pro.gif)>
               <div align="center" style="margin:15px 0px 0px 0px">
                 <script type="text/javascript" src="http://localtimes.info/clock.php?continent=Asia&country=Indonesia&city=Jakarta&widget_number=106&cp3_Hex=FFB200&cp2_Hex=FFFFFF&cp1_Hex=000080&ham=1&fwdt=130">
                 </script>
