--- a/index.html
+++ b/index.html
@@ -2,7 +2,25 @@
     <head>
       <title>web mailda turohmnan</title>
       <link rel="stylesheet" href="yaya.css" />
-          <body style="background-image: url(Pro.gif)">
+          <body style="background-image: url(Pro.gif) background-size: cover;
+
+    background-position: center;
+
+    background-repeat: no-repeat;
+
+    display: flex;
+
+    justify-content: center;
+
+    align-items: center;
+
+    height: 100%;
+
+    width: 100%;
+
+    margin: 0;
+
+    padding: 0;">
               <div align="center" style="margin:15px 0px 0px 0px">
                 <script type="text/javascript" src="http://localtimes.info/clock.php?continent=Asia&country=Indonesia&city=Jakarta&widget_number=106&cp3_Hex=FFB200&cp2_Hex=FFFFFF&cp1_Hex=000080&ham=1&fwdt=130">
                 </script>
