--- a/index.html
+++ b/index.html
@@ -2,12 +2,7 @@
     <head>
       <title>web mailda turohmnan</title>
       <link rel="stylesheet" href="yaya.css" />
-          <body style="background-color: red;">
-              <div align="center" style="margin:15px 0px 0px 0px">
-                <script type="text/javascript" src="http://localtimes.info/clock.php?continent=Asia&country=Indonesia&city=Jakarta&widget_number=106&cp3_Hex=FFB200&cp2_Hex=FFFFFF&cp1_Hex=000080&ham=1&fwdt=130">
-                </script>
-                <script><a href="http://www.success-4all.com/"></script>
-            </div>                
+          <body>            
 
               <!-- NAVIGATION BAR -->
                           <div class="container-navbar">                             
