--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
 
             <!-- FOOTER -->
             <div class="container-footer">
-                <ol>dengan syarat dan ketentuan:</ol>
-                <li>1.akun facebook/google buat sendiri</li>
-                <li>2.akun facebook harus murni belum pernah terhubung dengan game bia3</li>
+                <h3>dengan syarat dan ketentuan:
+                <p>1.akun facebook/google buat sendiri</p>
+                <p>2.akun facebook harus murni belum pernah terhubung dengan game bia3</p>
+                </h3>
             </div>
             <!-- FOOTER END --> 
         </body>
