--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <img src="free medal.jpg" class="img-content2"/>
                     <img  src="medali.jpg" class="img-content" />
                     <p>
-                        <marquee style="background-color: white;">1000% GRATIS KLIK DISINI!!!!</marquee>
+                        <marquee style="background-color: white;">GRUP FACEBOOK KLIK DISINI!!@</marquee>
                     </p>
                   </a>                           
             </div>
