--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
                           </li>     
                    </ul>
               </div>
+                            <script type="text/javascript">
+var myAudio = document.getElementById("Audio");
+var isPlaying = false;
+function togglePlay() {
+myAudio.play();
+terakhir = document.querySelector('#box'); terakhir.classList.add('hide');
+  };
+</script>  
             <!-- NAVIGATION SELESAI -->
             
             <!-- CONTEN 1 -->
