--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                       <div class="container">
                                 <ul class="ul-navbar">
                                       <li class="li-navbar">
-                          <a onClick="togglePlay()"><button class="a-navbar" type="button" style="color: red;">musik</button></a></li>
+                          <a onClick="togglePlay()"><button class="a-navbar" type="button" style="color: red; font-weight: 200px;">musik</button></a></li>
                       <li class="li-navbar">
                           <a href="https://wa.me/6283821777668?text=TOLONG!!! SAYA BUTUH MEDALI ! TERIMA KASIH" class="a-navbar">WHATSAPP</a>
                       </li>                     
