--- a/video.html
+++ b/video.html
@@ -10,7 +10,7 @@
     <div class="video-grid">
         <div class="video-item">
             <video controls>
-                <source src="video1.mp4" type="video/mp4">
+                <source src="guntur.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
