--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                           <a href="telegram.html" class="a-navbar">TELEGRAM</a>
                       </li>
                       <li class="li-navbar" >
-                          <a href="video.html" class="a-navbar">VIDIO</a>
+                          <a href="vidio.html" class="a-navbar">VIDIO</a>
                       </li>
                         <li class="li-navbar">
                             <a href="testimoni.html" class="a-navbar">TESTIMONI</a>
