--- a/video.html
+++ b/video.html
@@ -28,6 +28,6 @@
         </div>
         <!-- Tambahkan lebih banyak item video di sini -->
     </div>
-    <script src="vidio.js"></script>
+    <script src="main2.js"></script>
 </body>
 </html>
