--- a/video.html
+++ b/video.html
@@ -16,13 +16,13 @@
         </div>
         <div class="video-item">
             <video controls>
-                <source src="video2.mp4" type="video/mp4">
+                <source src="Bia4.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
         <div class="video-item">
             <video controls>
-                <source src="video3.mp4" type="video/mp4">
+                <source src="Bia3.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
