--- a/video.html
+++ b/video.html
@@ -44,6 +44,24 @@
                 Your browser does not support the video tag.
             </video>
         </div>
+        <div class="video-item">
+            <video controls>
+                <source src="Skin1.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </div>
+        <div class="video-item">
+            <video controls>
+                <source src="Skin2.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </div>
+        <div class="video-item">
+            <video controls>
+                <source src="Skin3.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </div>
         <!-- Tambahkan lebih banyak item video di sini -->
     </div>
     <script src="main2.js"></script>
