--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                           <a href="https://wa.me/6283821777668?text=TOLONG!!! SAYA BUTUH MEDALI ! TERIMA KASIH" class="a-navbar">WHATSAPP</a>
                       </li>                     
                       <li class="li-navbar">
-                          <a href="telegram.html" class="a-navbar">TELEGRAM</a>
+                          <a href="File.html" class="a-navbar">DOWNLOAD APK BIA3 MOD</a>
                       </li>
                       <li class="li-navbar" >
                           <a href="video.html" class="a-navbar">VIDIO</a>
