--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
     <head>
       <title>web mailda turohmnan</title>
       <link rel="stylesheet" href="yaya.css" />
+        <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MQNY3KJ67N"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-MQNY3KJ67N');
+</script>
           <body>            
 
               <!-- NAVIGATION BAR -->
