--- a/testimoni.html
+++ b/testimoni.html
@@ -2,6 +2,15 @@
     <head>
         <title>testimoni </title>
         <link rel="stylesheet" href="yaya.css" />
+        <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MQNY3KJ67N"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-MQNY3KJ67N');
+</script>
         <body style="background-image:  url(1j6F.gif)">
     <div class="container-navbar2">
         <div class="container2"> 
