--- a/File.html
+++ b/File.html
@@ -27,6 +27,20 @@
         .button-link:hover {
             background-color: #45a049; /* Warna saat hover */
         }
+         .button-pass {
+          display: block; /* Agar setiap tombol berada di baris baru */
+            padding: 10px 30px;
+            display: flex;
+            justify-content: center;
+            margin: 0;
+            width: 20px;
+            background-color: blue; /* Warna latar belakang */
+            color: white; /* Warna teks */
+            text-align: center;
+            text-decoration: none; /* Menghilangkan garis bawah */
+            border-radius: 5px; /* Membuat sudut membulat */
+            margin: 15px 0; /* Spasi antara tombol */
+         }
     </style>
 </head>
 <body>
@@ -38,6 +52,7 @@
      <a href="https://drive.google.com/file/d/13LONuVcvXjNsh1m19hj_OGN6JhGAgMxZ/view?usp=drivesdk" class="button-link">Apk Game Guardian</a>
       <a href="https://drive.google.com/file/d/10YmCO2VhKN15wzeUJ8kPvtjTTpm9sPrM/view?usp=drivesdk" class="button-link">Apk MT manager</a>
        <a href="https://example.com" class="button-link">File Script lua</a>
+    <a href="https://example.com" class="button-pass">HOME</a>
 
 </body>
 </html>
