--- a/File.html
+++ b/File.html
@@ -52,7 +52,7 @@
      <a href="https://drive.google.com/file/d/13LONuVcvXjNsh1m19hj_OGN6JhGAgMxZ/view?usp=drivesdk" class="button-link">Apk Game Guardian</a>
       <a href="https://drive.google.com/file/d/10YmCO2VhKN15wzeUJ8kPvtjTTpm9sPrM/view?usp=drivesdk" class="button-link">Apk MT manager</a>
        <a href="https://example.com" class="button-link">File Script lua</a>
-    <a href="https://example.com" class="button-pass">HOME</a>
+    <a href="index.html" class="button-pass">HOME</a>
 
 </body>
 </html>
